third_party/rust/async-trait/tests/ui/bare-trait-object.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/bare-trait-object.rs:11:16
   |
11 | impl Trait for Send + Sync {
   |                ^^^^^^^^^^^ help: use `dyn`: `dyn Send + Sync`
   |
note: the lint level is defined here
  --> $DIR/bare-trait-object.rs:1:9
   |
1  | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>
